--- a/intro.html
+++ b/intro.html
@@ -9,7 +9,7 @@
 <body>
     
 <div class="pagebg">
-<iframe src="Intro.pdf" class="ggg" height="100%" width="100%" frameborder="0"></iframe>
+<iframe src="intro.pdf" class="ggg" height="100%" width="100%" frameborder="0"></iframe>
 </div>
 </body>
 </html>
