--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li class="metallic-text"><a target="_blank" href="report1.html">Signal Modulation And Warfare</a></li>
         <li class="metallic-text"><a target="_blank" href="report3.html">Weather Prediction And Warfare</a></li>
         <li class="metallic-text"><a target="_blank" href="report4.html">Nuclear Weaponary</a></li>
-        <li class="metallic-text"><a target="_blank" href="Credit.html">Credits</a></li>
+        <li class="metallic-text"><a target="_blank" href="credit.html">Credits</a></li>
       </ul>
     </div>
     <div id="container3D"></div>
